Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         </div>
         <div class="icons">
           <div class="img-container">
-            <a href="https://www.instagram.com/ibtissam_guennoufa/"><img src="icons/bx-instagram.png"></a>
+            <a href="https://www.instagram.com/ibtissam_guennoufa/"><img src="bx-instagram.png"></a>
             <div class="tooltip">Instagram</div>
           </div>
           <div class="img-container">
-            <img src="icons/bx-facebook.png">
+            <img src="bx-facebook.png">
             <div class="tooltip">Facebook</div>
           </div>
           <div class="img-container">
-            <img src="icons/bx-twitter-x.png">
+            <img src="bx-twitter-x.png">
             <div class="tooltip">Twitter</div>
           </div>
           <div class="img-container">
-            <a href="https://www.linkedin.com/in/guennoufa26/"><img src="icons/bx-linkedin-square.png"></a>
+            <a href="https://www.linkedin.com/in/guennoufa26/"><img src="bx-linkedin-square.png"></a>
             <div class="tooltip">LinkedIn</div>
           </div>
       </div>
@@ -59,4 +59,5 @@
     </section>
   </main>
 </body>
+
 </html>
